--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 			</div>
 		</div>
 	</div>
+	<footer>
+		2017 Miau, Inc.
+	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
